fixed bottom alignment of panels

--- a/ITC-SaaS-Assignment/style.css
+++ b/ITC-SaaS-Assignment/style.css
@@ -95,7 +95,7 @@ h1 {
   display: flex;
   flex-direction: column;
   /* width: 256p; */
-  width: 20%;
+  width: 22%;
   height: 100%;
   z-index: 1;
   background: #ffffff;
@@ -232,7 +232,12 @@ h1 {
 }
 
 #search-icon {
+  margin-left: 1.5rem;
   margin-right: 0.5rem;
+}
+
+#notification-icon {
+  margin-right: 1.5rem;
 }
 
 .dashboard {
@@ -240,7 +245,7 @@ h1 {
   justify-content: space-evenly;
   width: 100%;
   height: 100%;
-  /* padding: 10p; */
+  padding: 2rem;
   /* margin: 36p 20p; */
   /* border: goldenrod 0.25rem dashed; */
 }
@@ -249,7 +254,7 @@ h1 {
   display: flex;
   flex-direction: column;
   background: #ffffff;
-  margin: 0.25rem;
+  /* margin: 0.25rem; */
   box-shadow: 0 0.375rem 1.125rem rgba(0, 0, 0, 0.06);
   border-radius: 0.25rem;
   /* padding-inline: 1.5rem; */
@@ -264,11 +269,16 @@ h1 {
   flex-basis: 60%;
   /* border: 0.188rem solid green; */
   height: 100%;
+  margin-right: 0.75rem;
 }
 
 .side-panels,
 .main-panel {
-  padding: 2rem;
+  /* padding: 2rem; */
+}
+
+.side-panel {
+  margin-left: 0.75rem;
 }
 
 .main-panel .panel {
@@ -284,7 +294,9 @@ h1 {
   display: flex;
   justify-content: space-between;
   /* border: aqua 4p solid; */
-  margin-block: 1rem;
+  /* margin-block: 1rem; */
+  margin-bottom: 1.7rem;
+  margin-top: 2.75rem;
 }
 
 .date-picker button {
@@ -316,6 +328,7 @@ h1 {
   letter-spacing: 0.01em;
   justify-content: center;
   padding: 0.25rem;
+  margin-top: 0.25rem;
   width: 1.5rem;
   height: 1.5rem;
 }
@@ -365,7 +378,7 @@ h1 {
   /* flex: 2; */
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: space-between;
   height: 100%;
   /* border: orange 0.188rem solid; */
 }
@@ -401,7 +414,9 @@ h1 {
 
 .task {
   /* border: black solid 1p; */
-  margin-block: 1rem;
+  /* margin-block: 1.6rem; */
+  margin-block-start: 1.6rem;
+  margin-block-end: 1rem;
   padding: 1rem;
   box-shadow: 0 0.125rem 0.625rem 0 #00000014;
 }
@@ -504,7 +519,7 @@ h1 {
 }
 
 #deals-graph {
-  width: 90%;
+  /* width: 90%; */
 }
 
 .deals-graph {
@@ -570,13 +585,25 @@ h1 {
 }
 
 @media (max-width: 600px) {
-  .sidebar {
+  /* .sidebar {
     display: none;
-  }
+  } */
 
   /* .panel,
   .main-panel,
   .side-panel */
+}
+
+@media (max-width: 1380px) {
+  .sidebar {
+    display: none;
+  }
+
+  /* @media (max-width: 800px) { */
+  .dashboard {
+    flex-direction: column;
+  }
+
   .panel {
     margin: 0;
     border-radius: 0;
@@ -590,24 +617,17 @@ h1 {
     display: none;
   }
 
-  .date-picker * {
-    display: none;
-  }
+  /* .date-picker * {
+      display: none;
+    } */
 
   .task:hover .edit-icon {
     display: none;
   }
 }
 
-/* @media (max-width: 1380p) { */
-@media (max-width: 800px) {
-  .dashboard {
-    flex-direction: column;
-  }
-}
-
-@media (max-width: 1073px) {
-  .profile-info {
-    visibility: hidden;
-  }
-}
+/* @media (max-width: 1073px) {
+    .profile-info {
+      visibility: hidden;
+    }
+  } */
